Add support for profiles.   * deck.js profile (properties file)   * reveal.js profile (Groovy)   * impress.js profile (Groovy)